big update. adding CELLM_EX few-shot prompting function, Arcus functionality

--- a/Sidebar.html
+++ b/Sidebar.html
@@ -5,12 +5,25 @@
   </head>
   <body>
     <form id="settingsForm">
-      <label for="openAiApiKey">OpenAI API Key:</label><br>
-      <input type="text" id="openAiApiKey" name="openAiApiKey"><br>
-      <label for="anthropicApiKey">Anthropic API Key:</label><br>
-      <input type="text" id="anthropicApiKey" name="anthropicApiKey"><br>
+      <fieldset>
+        <legend>LLM Settings</legend>
+        <label for="openAiApiKey">OpenAI API Key (<a href="https://platform.openai.com/account/api-keys" rel="noreferrer nofllow" target="_blank">Find Yours</a>):</label><br>
+        <input type="text" id="openAiApiKey" name="openAiApiKey"><br>
+        <label for="anthropicApiKey">Anthropic API Key (<a href="https://console.anthropic.com/account/keys" rel="noreferrer nofllow" target="_blank">Find Yours</a>):</label><br>
+        <input type="text" id="anthropicApiKey" name="anthropicApiKey"><br>
+      </fieldset>
+      
+      <fieldset>
+        <legend>Arcus Settings (<a href="https://app.arcus.co/docs/arcus/getting-started/authentication/" rel="noreferrer nofllow" target="_blank">Setup</a>)</legend>
+        <label for="arcusApiKey">Arcus API Key (<a href="https://app.arcus.co/settings/" rel="noreferrer nofllow" target="_blank">Find Yours</a>):</label><br>
+        <input type="text" id="arcusApiKey" name="arcusApiKey"><br>
+        <label for="arcusProjectId">Arcus Project ID (<a href="https://app.arcus.co/" rel="noreferrer nofllow" target="_blank">Find Yours</a>):</label><br>
+        <input type="text" id="arcusProjectId" name="arcusProjectId"><br>
+      </fieldset>
+      
       <input type="submit" value="Save">
     </form>
+
     <script>
       document.getElementById('settingsForm').addEventListener('submit', saveSettings);
 
@@ -18,21 +31,35 @@
         e.preventDefault();
         var openAiApiKey = document.getElementById('openAiApiKey').value;
         var anthropicApiKey = document.getElementById('anthropicApiKey').value;
+        var arcusApiKey = document.getElementById('arcusApiKey').value;
+        var arcusProjectId = document.getElementById('arcusProjectId').value;
         if (openAiApiKey !== "") {
-          google.script.run.saveApiKey(openAiApiKey, "OpenAI");
+          google.script.run.setProperty("OpenAI_API_KEY", openAiApiKey);
         }
         if (anthropicApiKey !== "") {
-          google.script.run.saveApiKey(anthropicApiKey, "Anthropic");
+          google.script.run.setProperty("Anthropic_API_KEY", anthropicApiKey);
+        }
+        if (arcusApiKey !== "") {
+          google.script.run.setProperty("Arcus_API_KEY", arcusApiKey);
+        }
+        if (arcusApiKey !== "") {
+          google.script.run.setProperty("Arcus_PROJECT_ID", arcusProjectId);
         }
       }
 
       window.onload = function() {
         google.script.run.withSuccessHandler(function(openAiApiKey) {
           document.getElementById('openAiApiKey').value = openAiApiKey;
-        }).getApiKey("OpenAI");
+        }).getProperty("OpenAI_API_KEY");
         google.script.run.withSuccessHandler(function(anthropicApiKey) {
           document.getElementById('anthropicApiKey').value = anthropicApiKey;
-        }).getApiKey("Anthropic");
+        }).getProperty("Anthropic_API_KEY");
+        google.script.run.withSuccessHandler(function(arcusApiKey) {
+          document.getElementById('arcusApiKey').value = arcusApiKey;
+        }).getProperty("Arcus_API_KEY");
+        google.script.run.withSuccessHandler(function(arcusProjectId) {
+          document.getElementById('arcusProjectId').value = arcusProjectId;
+        }).getProperty("Arcus_PROJECT_ID");
       }
     </script>
   </body>
